mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/struct_with_tuple_fields.stderr
error: unused `ThreeInts` that must be used
  --> tests/failing_no_mass_cfg_attr/struct_with_tuple_fields.rs:15:5
   |
15 | /     ThreeInts(
16 | |         1,
17 | |         2,
18 | |         3,
19 | |     );
   | |______^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/struct_with_tuple_fields.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
